Crawler: replaced URLs with URIs.